# executorch

./: CMakeLists.txt
.ci/docker/ci_commit_pins/: pytorch.txt
.github/: release.yml
backends/arm/: README.md  arm_backend.py
backends/arm/test/: common.py  runner_utils.py  test_arm_baremetal.sh
backends/arm/test/ops/: test_depthwise_conv.py
backends/openvino/: CMakeLists.txt
backends/openvino/quantizer/: quantizer.py
backends/openvino/scripts/: openvino_build.sh
backends/xnnpack/: CMakeLists.txt
dl_xnnpack_script/: aot_xnnpack_compiler.py  benchmark.sh  run_batch.py
examples/llm_manual/: CMakeLists.txt  export_nanogpt.py
examples/openvino/: CMakeLists.txt  aot_openvino_compiler.py  aot_optimize_and_infer.py  openvino_build.sh  openvino_build_example.sh  run_batch.py
examples/openvino/aot/: aot_openvino_compiler.py  benchmark.sh  get_table.py  run_batch.py
examples/yolo12/: CMakeLists.txt  aot_optimize_and_infer_ultralytics.py  main.cc
examples/yolo12_/: CMakeLists.txt  aot_optimize_and_infer_ultralytics.py  build.sh  inference.cpp  inference.h  main.cpp
examples/yolo12_torchlib/: CMakeLists.txt  aot_optimize_and_infer_ultralytics.py  build.sh  how_to_build_xnnpack_backend.txt  main.cc
